2010-09-24  Corinna Vinschen  <corinna@vinschen.de>

	* errno.cc (errmap): Map ERROR_BAD_NET_RESP to ENOSYS.
	* fhandler_disk_file.cc (fhandler_disk_file::facl): Handle ENOSYS and
	point to  the explanation.
	* ntdll.h (STATUS_NOT_IMPLEMENTED): Define.
	* path.cc (symlink_info::check): Handle the inability of NT4 to use
	FileNetworkOpenInformation on share root dirs in either direction.
	* path.h (slash_unc_prefix_p): Remove unused declaration.
	* security.cc (get_info_from_sd): Handle ENOSYS from get_file_sd.
	Explain when this happens.

2010-09-23  Christopher Faylor  <me+cygwin@cgf.cx>

	* autoload.cc (std_dll_init): Use correct format type when displaying
	dll name in error output.

2010-09-21  Pierre Humblet <Pierre.Humblet@ieee.org>

	* libc/minires.c (res_nsend): Use the Windows resolver if appropriate.
	(dn_expand): Only set errno in case of error. Delete old comments.
	(dn_skipname): Fix typo in comment.

2010-09-21  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (cwdstuff::set): Replace constant 2 with sizeof(WCHAR) where
	appropriate.

2010-09-21  Corinna Vinschen  <corinna@vinschen.de>

	* mount.h (class fs_info): Add has_buggy_reopen flag and accessor
	methods.
	* mount.cc (fs_info::update): Set has_buggy_reopen flag for NWFS.
	Add comment.
	* path.h (path_conv::get_object_attr) Make inline method.
	(path_conv::init_reopen_attr): New inline method.
	* path.cc (path_conv::get_object_attr): Remove.
	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Use
	path_conv::init_reopen_attr method to initialize OBJECT_ATTRIBUTE for
	reopening file.
	(fhandler_disk_file::fchmod): Ditto.
	(fhandler_base::utimens_fs): Ditto.
	(fhandler_disk_file::rewinddir): Ditto.
	* syscalls.cc (unlink_nt): Ditto.

2010-09-21  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Always open NFS files with
	FILE_READ_EA, even when opening with O_WRONLY to allow fstat.
	* fhandler_disk_file.cc (fhandler_base::fstat_by_nfs_ea): Call