@@ -479,6 +479,9 @@ fhandler_base::open (int flags, mode_t mode)
       case query_write_control:
 	access = READ_CONTROL | WRITE_OWNER | WRITE_DAC | FILE_WRITE_ATTRIBUTES;
 	break;
+      case query_write_dac:
+	access = READ_CONTROL | WRITE_DAC | FILE_WRITE_ATTRIBUTES;
+	break;
       case query_write_attributes:
 	access = READ_CONTROL | FILE_WRITE_ATTRIBUTES;
 	break;
